--- a/playground/landing/templates/landing/landing.html
+++ b/playground/landing/templates/landing/landing.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>¡Hola, mundo desde el template landing!</h1>
+    <p>Mi nombre es {{ name }} y tengo {{ age }} años.</p>
 </body>
 </html>
