--- a/playground/landing/templates/landing/landing.html
+++ b/playground/landing/templates/landing/landing.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>¡Hola, mundo desde el template landing!</h1>
-    <p>Mi nombre es {{ name }} y tengo {{ age }} años.</p>
+    <p>Mi nombre es {{ name | title }} y tengo {{ age }} años.</p>
+    <p>La fecha de hoy es {{ current_date | date:"d/m/Y" }}</p>
 </body>
 </html>
