--- a/playground/landing/templates/landing/landing.html
+++ b/playground/landing/templates/landing/landing.html
@@ -15,9 +15,26 @@
     {% else %}
         <p>Hola, visitante.</p>
     {% endif %}
-    
+
     {% if current_date %}
         <p>La fecha de hoy es {{ current_date | date:"d/m/Y" }}</p>
     {% endif %}
+
+    {% if age >= 18 %}
+        <p>Eres mayor de edad.</p>
+    {% else %}
+        <p>Eres menor de edad.</p>
+    {% endif %}
+
+    <h2>Mi stack de desarrollo:</h2>
+    <ul>
+        {% for tech in stack %}
+            <li>{{ tech }}</li>
+        {% empty %}
+            <li>No hay tecnologías en el stack.</li>
+        {% endfor %}
+    </ul>
+    <h3>Mi primer stack es {{ stack.0 }}</h3>
+    <h3>Mi último stack es {{ stack|last }}</h3>
 </body>
 </html>
