--- a/playground/templates/base.html
+++ b/playground/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Document{% endblock %}</title>
 </head>
 <body>
+    {% include './includes/header.html' %}
     {% block content %}
     <h1>Welcome to my website!</h1>
     <p>This is a sample paragraph.</p>
