--- a/playground/templates/base.html
+++ b/playground/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Document{% endblock %}</title>
+    {% block page_style %}{% endblock %}
 </head>
 <body>
     {% include './includes/header.html' %}
