85 Exploración de cursos - Cargar imágenes

--- a/devilearn/apps/courses/templates/courses/course_lessons.html
+++ b/devilearn/apps/courses/templates/courses/course_lessons.html
@@ -17,7 +17,7 @@
             <div class="back-link"> <button class="discusiones">← Ve al panel de control</button></div>
 
         </div>
-        <div class="logo"><img src="./images/devilearn.png" alt="Logo devilearn"></div>
+        <div class="logo"><img src="images/devilearn.png" alt="Logo devilearn"></div>
     </header>
 
     <!-- LAYOUT PRINCIPAL -->
