--- a/devilearn/apps/courses/templates/courses/courses.html
+++ b/devilearn/apps/courses/templates/courses/courses.html
@@ -14,7 +14,7 @@
 
         <div class="sidebar">
             <div class="logo">
-                <img src="./images/devilearn.png" alt="Logo">
+                <img src="{% static 'images/devilearn.png' %}" alt="Logo">
             </div>
             <ul class="menu">
                 <li><a class="menu-option" href="index.html"><i
@@ -58,7 +58,7 @@
                             <!-- Card 1 -->
                             <div class="course-card">
                                 <a href="course_detail.html">
-                                    <img src="./images/curso_1.jpg" alt="Course Image" class="course-img" />
+                                    <img src="{% static 'images/curso_1.jpg' %}" alt="Course Image" class="course-img" />
                                     <div class="course-info">
                                         <div class="course-rating">
                                             <span class="tag beginner">Beginner</span>
@@ -81,7 +81,7 @@
                             <!-- Card 2 -->
                             <div class="course-card">
                                 <a href="course_detail.html">
-                                    <img src="./images/curso_2.jpg" alt="Course Image" class="course-img" />
+                                    <img src="{% static 'images/curso_2.jpg' %}" alt="Course Image" class="course-img" />
                                     <div class="course-info">
                                         <div class="course-rating">
                                             <span class="tag beginner">Beginner</span>
@@ -103,7 +103,7 @@
                             <!-- Card 3 -->
                             <div class="course-card">
                                 <a href="course_detail.html">
-                                    <img src="./images/curso_3.jpg" alt="Course Image" class="course-img" />
+                                    <img src="{% static 'images/curso_3.jpg' %}" alt="Course Image" class="course-img" />
                                     <div class="course-info">
                                         <div class="course-rating">
                                             <span class="tag beginner">Beginner</span>
@@ -127,7 +127,7 @@
                             <!-- Card 4 -->
                             <div class="course-card">
                                 <a href="course_detail.html">
-                                    <img src="./images/curso_4.jpg" alt="Course Image" class="course-img" />
+                                    <img src="{% static 'images/curso_4.jpg' %}" alt="Course Image" class="course-img" />
                                     <div class="course-info">
                                         <div class="course-rating">
                                             <span class="tag beginner">Beginner</span>
