--- a/devilearn/apps/courses/templates/courses/course_detail.html
+++ b/devilearn/apps/courses/templates/courses/course_detail.html
@@ -14,7 +14,7 @@
 
         <div class="sidebar">
             <div class="logo">
-                <img src="./images/devilearn.png" alt="Logo">
+                <img src="images/devilearn.png" alt="Logo">
             </div>
             <ul class="menu">
                 <li><a class="menu-option" href="index.html"><i
