--- a/devilearn/apps/courses/templates/courses/course_detail.html
+++ b/devilearn/apps/courses/templates/courses/course_detail.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Devilearn</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
-</head>
+{% block custom_styles %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+{% endblock custom_styles %}
 
-<body>
+{% block title %}
+    Detalle del curso
+{% endblock %}
+
+{% block content %}
+
     <div class="layout">
 
         <div class="sidebar">
@@ -110,8 +111,8 @@
             </main>
         </div>
     </div>
-    <script src="./js/script.js"></script>
+{% endblock %}
 
-</body>
-
-</html>
+{% block scripts %}
+    <script src="{% static 'js/script.js' %}"></script>
+{% endblock %}
