92 Sección de lecciones - Adaptando template

--- a/devilearn/apps/courses/templates/courses/course_lessons.html
+++ b/devilearn/apps/courses/templates/courses/course_lessons.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends "base.html" %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Django</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+{% block custom_styles %}
+    <link rel="stylesheet" href="{% static 'css/lessons.css' %}">
+{% endblock custom_styles %}
+{% block title %}
+    Lecciones del curso
+{% endblock %}
+{% block content %}
 
-    <link rel="stylesheet" href="./css/lessons.css">
-</head>
-
-<body>
     <!-- HEADER SUPERIOR -->
     <header class="topbar">
         <div class="acciones">
             <div class="back-link"> <button class="discusiones">← Ve al panel de control</button></div>
 
         </div>
-        <div class="logo"><img src="images/devilearn.png" alt="Logo devilearn"></div>
+        <div class="logo"><img src="{% static 'images/devilearn.png' %}" alt="Logo devilearn"></div>
     </header>
 
     <!-- LAYOUT PRINCIPAL -->
@@ -76,7 +74,8 @@
         </main>
     </div>
 
-    <script src="./js/multimedia.js"></script>
-</body>
+{% endblock %}
 
-</html>
+{% block scripts %}
+    <script src="{% static 'js/script.js' %}"></script>
+{% endblock %}
