Configuración del proyecto y datos importados para comenzar

--- a/devilearn/apps/courses/templates/courses/course_detail.html
+++ b/devilearn/apps/courses/templates/courses/course_detail.html
@@ -1,23 +1,19 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load static %}
+{% block title %}Detalle del curso{% endblock title %}
 
-{% block custom_styles %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+{% block custom_styles %} 
+    <link rel="stylesheet" href="{% static 'css/styles.css'%}" />
 {% endblock custom_styles %}
 
-{% block title %}
-    Detalle del curso
-{% endblock %}
-
 {% block content %}
-
-    <div class="layout">
+<div class="layout">
 
         {% include 'includes/sidebar.html' %}
 
         <!-- Main content -->
         <div class="main-content">
-            <!-- Header -->
+            
             {% include 'includes/header.html' %}
 
             <!-- Aquí va el contenido de la página -->
@@ -28,20 +24,22 @@
                     <div class="course-sections">
                         <h2>Contenido del curso</h2>
                         <div class="accordion">
-
+                            
                             {% for section in course.course_content %}
-                            <div class="accordion-item">
-                                <button class="accordion-header">Sección {{ forloop.counter }}: {{ section.name }}</button>
+                                <div class="accordion-item">
+                                <button class="accordion-header">Sección {{section.id}}: {{section.name}}</button>
                                 <div class="accordion-content">
                                     <ul>
-                                        {% for lesson in section.lessons %}
-                                        <li><i class="fa-solid {% if lesson.type == 'video' %}fa-video{% else %}fa-file{% endif %}"></i>{{ lesson.name }}</li>
+                                        
+                                        {% for lesson in section.lessons  %}
+                                            <li><i class="fa-solid {% if lesson.type == 'video'%} fa-video {%else%} fa-file {%endif%} "></i>{{lesson.name}}</li>
                                         {% endfor %}
+                                        
                                     </ul>
                                 </div>
-                            </div>
+                                </div>
                             {% endfor %}
-                           
+                                
                             <!-- Agrega más secciones similares -->
                         </div>
                     </div>
@@ -56,9 +54,9 @@
                         <div class="card-body">
                             <h3>Acerca de este curso</h3>
                             <ul class="course-details">
-                                <li><i class="fa-solid fa-file"></i> {{ course.info_course.lessons }} clases</li>
-                                <li><i class="fa-solid fa-video"></i> {{ course.info_course.duration }}horas de contenido en video</li>
-                                <li><i class="fa-solid fa-graduation-cap"></i> {{ course.info_course.instructor }}</li>
+                                <li><i class="fa-solid fa-file"></i> {{ course.info_course.lessons }} clases</li>
+                                <li><i class="fa-solid fa-video"></i> {{ course.info_course.duration }} horas de contenido en video</li>
+                                <li><i class="fa-solid fa-graduation-cap"></i> {{ course.info_course.instructor }}</li>
                             </ul>
                             <a class="btn bnt-primary btn-course" href="{% url course.course_link %}">Continuar aprendiendo</a>
 
@@ -68,8 +66,10 @@
             </main>
         </div>
     </div>
-{% endblock %}
-
+{% endblock content %}
+    
 {% block scripts %}
-    <script src="{% static 'js/script.js' %}"></script>
-{% endblock %}
+<script src="{% static 'js/script.js'%}"></script>
+{% endblock scripts %}
+    
+
