202 Página de cursos - renderizar información

--- a/devilearn/apps/courses/templates/courses/courses.html
+++ b/devilearn/apps/courses/templates/courses/courses.html
@@ -29,7 +29,7 @@
                             {% for course in courses %}
                                 <div class="course-card">
                                 <a href="{% url 'course_detail' %}">
-                                    <img src="{% static course.course_image%}" alt="Course Image" class="course-img" />
+                                    <img src="{{ course.image }}" alt="Course Image" class="course-img" />
                                     <div class="course-info">
                                         <div class="course-rating">
                                             <span class="tag beginner">{{ course.level }}</span>
@@ -38,10 +38,10 @@
                                             </div>
                                         </div>
 
-                                        <h3 class="course-title">{{course.course_title}}
+                                        <h3 class="course-title">{{course.title}}
                                         </h3>
-                                        <div class="author"><img src="{{ course.instructor_image}}"
-                                                alt=""><span>{{ course.instructor }}</span></div>
+                                        <div class="author"><img src="{{ course.owner.instructor_profile.photo }}"
+                                                alt=""><span>{{ course.owner.get_full_name }}</span></div>
                                     </div>
 
                                 </a>
