Add paginator and search in courses page

--- a/devilearn/apps/courses/templates/courses/courses.html
+++ b/devilearn/apps/courses/templates/courses/courses.html
@@ -23,10 +23,8 @@
 
                 <div class="carousel-wrapper">
                     <div class="course-grid">
-                         
-                            
-                            
-                            {% for course in courses %}
+
+                            {% for course in courses_obj %}
                                 <div class="course-card">
                                 <a href="{% url 'course_detail' %}">
                                     <img src="{{ course.image }}" alt="Course Image" class="course-img" />
@@ -47,8 +45,20 @@
                                 </a>
                             </div>
                             {% endfor %}
-                                
-                         
+                    </div>
+                     <div class="paginator">                        
+                        {% if courses_obj.has_previous %}
+                            <a href="?page=1&{{query_string}}">Primera</a>
+                            <a href="?page={{courses_obj.previous_page_number}}&{{query_string}}">Anterior</a>
+                        {% endif %}
+
+                        <span>Página {{courses_obj.number}} de {{courses_obj.paginator.num_pages}}</span>
+
+                        {% if courses_obj.has_next %}
+                            <a href="?page={{courses_obj.next_page_number}}&{{query_string}}">Siguiente</a>
+                            <a href="?page={{courses_obj.paginator.num_pages}}&{{query_string}}">Última</a>
+                        {% endif %}
+                            
                     </div>
                 </div>
 
