--- a/devilearn/templates/includes/header.html
+++ b/devilearn/templates/includes/header.html
@@ -1,13 +1,17 @@
-
-
+<!-- Header -->
 <div class="header">
-    <div class="search-box">
-        <i class="fa-solid fa-magnifying-glass icon"></i>
-        <input type="text" placeholder="Buscar..." />
+  <form class="search-box" method="get">
+    <i class="fa-solid fa-magnifying-glass icon"></i>
+    <input
+      type="text"
+      placeholder="Buscar..."
+      name="q"
+      value="{%if query%}{{query}}{%endif%}"
+    />
+  </form>
+  <div class="header-right">
+    <div class="avatar">
+      <img src="https://randomuser.me/api/portraits/men/42.jpg" alt="User" />
     </div>
-    <div class="header-right">
-        <div class="avatar">
-            <img src="https://randomuser.me/api/portraits/men/42.jpg" alt="User" />
-        </div>
-    </div>
+  </div>
 </div>
