--- a/devilearn/apps/courses/templates/courses/courses.html
+++ b/devilearn/apps/courses/templates/courses/courses.html
@@ -26,7 +26,7 @@
 
                             {% for course in courses_obj %}
                                 <div class="course-card">
-                                <a href="{% url 'course_detail' %}">
+                                <a href="{% url 'course_detail' slug=course.slug %}">
                                     <img src="{{ course.image }}" alt="Course Image" class="course-img" />
                                     <div class="course-info">
                                         <div class="course-rating">
