--- a/playground/templates/base.html
+++ b/playground/templates/base.html
@@ -1,18 +1,34 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Document{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles.css' %}" />
+    <link
+      href="
+https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css
+"
+      rel="stylesheet"
+    />
     {% block page_style %}{% endblock %}
-</head>
-<body>
-    {% include './includes/header.html' %}
+  </head>
+  <body>
+    {% include './includes/header.html' %} 
+    <h1>Plantilla padre</h1>
+    {% if messages %}
+
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+        {% endfor %}
+    {% endif %}
     {% block content %}
     <h1>Welcome to my website!</h1>
     <p>This is a sample paragraph.</p>
     {% endblock %}
-</body>
+    <script src="
+https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js
+"></script>
+  </body>
 </html>
